# vae-book

./: .gitignore  README.md  hello.py  pyproject.toml
.github/ISSUE_TEMPLATE/: issue-custom.md
debug/: class-access.py  cumulative-prod.py  mps-benchmark.py  noise-comarison.py  print-path.py
src/: diffusion_model.py  gaussian_noise.py  simple_unet.py
